--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,14 @@
+@article{Gatto:2012io,
+author = {Gatto, Laurent and Lilley, Kathryn S},
+title = {{MSnbase-an R/Bioconductor package for isobaric tagged mass spectrometry data visualization, processing and quantitation.}},
+journal = {Bioinformatics},
+year = {2012},
+volume = {28},
+number = {2},
+pages = {288--289},
+month = jan
+}
+
 @article{Conley:2014ha,
 author = {Conley, Christopher J and Smith, Rob and Torgrip, Ralf J O and Taylor, Ryan M and Tautenhahn, Ralf and Prince, John T},
 title = {{Massifquant: open-source Kalman filter-based XC-MS isotope trace feature detection.}},
